edits to fake google page updated

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <div class="right nav">
         <a href="#">Gmail</a>
         <a href="#">Images</a>
-        <a href="#"><img src="#" alt="apps"></a>
-        <a href="#"><img src="#" alt="notifications"></a>
-        <a href="#"><img src="#" alt="profile"></a>
+        <a href="#"><img class="app" src="img/google-app-black.svg" alt="apps"></a>
+        <a href="#"><img class="notif" src="img/google-notification.png" alt="notifications"></a>
+        <a href="#"><img class="profile" src="img/google-profile.svg" alt="profile"></a>
       </div>
     </header>
 
